manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: real-ip-php
  labels:
    name: real-ip-php
