manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-ip-php
  namespace: real-ip-php
  labels:
    app: real-ip-php
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30080 # Optional: Specify a nodePort, or let Kubernetes allocate one
  selector:
    app: real-ip-php
